<resources>
    <string name="app_name">Kutuku</string>

    <!-- Screens Titles -->
    <string name="onboarding_screen_title">Onboarding</string>
    <string name="login_screen_title">Login</string>

    <!-- Onboarding Screen -->
    <string name="on_boarding_title_1">Various Collections Of The Latest Products</string>
    <string name="on_boarding_text_1">Urna amet, suspendisse ullamcorper ac elit diam facilisis cursus vestibulum.</string>
    <string name="on_boarding_title_2">Complete Collection Of Colors And Sizes</string>
    <string name="on_boarding_text_2">Urna amet, suspendisse ullamcorper ac elit diam facilisis cursus vestibulum.</string>
    <string name="on_boarding_title_3">Find The Most Suitable Outfit For You</string>
    <string name="on_boarding_text_3">Urna amet, suspendisse ullamcorper ac elit diam facilisis cursus vestibulum.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>

    <!-- Login Screen -->
</resources>